manifests/Develop/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onlineui
  name: brokerui-dev
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: onlineui
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: onlineui
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: onlineuiconfigmap
        image: acrcontainerregistrynonprod.azurecr.io/mvtprovisionbrokeronlineui:Latest
        imagePullPolicy: Always
        name: mvtprovisionbrokeronlineui
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "250Mi"
            cpu: "150m"
          limits:
            memory: "950Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: onlineui
  name: brokerui-svc-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: onlineui
  type: ClusterIP
